# exer

./: Cargo.toml
examples/: init.rs
sample/: exer.toml
sample/content/: index.md
sample/content/blog/: first-post.md  index.md
sample/content/blog/second-post/: page.toml
sample/templates/: index.html
sample/templates/blog/: child.html
src/: error.rs  lib.rs  main.rs  opt.rs  tasks.rs  templating.rs
src/templates/init/: exer.toml
