[package]
name = "exer"
version = "0.1.0"
authors = ["Stjepan Golemac <stjepan@tray.io>"]
edition = "2018"

[lib]
name = "exer_internals"
path = "src/lib.rs"

[[bin]]
name = "exer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
tera = "1.5.0"
thiserror = "1.0.21"
